<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".presentation.view.MainActivity">

    <TextView
        android:id="@+id/code"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="#E47C7C87"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:text="@string/Code"
        android:textAllCaps="true"
        android:textColor="#FAF7F7"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TCn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/name"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:background="#585860"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:text="@string/countryName"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TCn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/code"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/NRn"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:text="@string/number"
        android:textColor="#4CAF50"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ND"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/TRn"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/number"
        android:textColor="#4CAF50"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TD"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/NDn"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="#FF9800"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NC"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/TDn"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="#FF9800"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TC"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/NCn"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="#F80202"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/NC"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/TCn"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="95dp"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="#F80202"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/TC"
        android:layout_width="205dp"
        android:layout_height="115dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/total_confirmed"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/NC"
        android:layout_width="206dp"
        android:layout_height="115dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/new_confirmed"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/TC"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/TD"
        android:layout_width="205dp"
        android:layout_height="115dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/total_deaths"
        android:textColor="#FFFFFF"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TC"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/ND"
        android:layout_width="206dp"
        android:layout_height="115dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/new_deaths"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/TD"
        app:layout_constraintTop_toBottomOf="@+id/NC"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/TR"
        android:layout_width="205dp"
        android:layout_height="115dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/total_recovered"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TD"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/NR"
        android:layout_width="206dp"
        android:layout_height="115dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/new_recovered"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/TR"
        app:layout_constraintTop_toBottomOf="@+id/ND"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>